# buyer-scout

./: .gitignore  README.md  pyproject.toml
src/buyer_scout/: _init_.py  cli.py  config.py  core_store.py
src/buyer_scout/commands/: auth_bbb.py  crawl_bbb.py  debug_bbb.py  discover_serp.py  export.py
src/buyer_scout/parsers/: bbb_profile_parser.py
src/buyer_scout/profiles/: bbb_default.json
src/buyer_scout/providers/: bbb_browser.py  serpapi_provider.py
